# minsql

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.deps  Makefile  README.md  cleanup-vendor.sh  config.toml  config.toml.template  docker-compose.yml  git-credential-ghtoken  go.mod  go.sum  main.go
.travis/: build-hyperscan.sh  setup-travis.sh
buildscripts/: checkdeps.sh  checkgopath.sh  gen-ldflags.go
server/: api-handlers.go  build-constants.go  certs-dir.go  certs.go  chunker.go  config.go  http.go  minio.go  router.go  serve.go  signals.go  sql.go
src/: auth.rs  config.rs  constants.rs  dialect.rs  filter.rs  http.rs  hyperscan.rs  ingest.rs  lib.rs  line_taker.rs  main.rs  meta.rs  query.rs  storage.rs
src/api/: api_datastores.rs  api_logs.rs  api_tokens.rs  auth.rs  datastores.rs  logs.rs  mod.rs  tokens.rs
src/combinators/: mod.rs  take_from_iterable.rs
webui/: LICENSE  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
webui/assets/: statik.go
webui/projects/minsql-ui/: karma.conf.js  tslint.json
webui/projects/minsql-ui/src/: index.html  main.ts  polyfills.ts  styles-app-loading.scss  styles-reset.scss  styles-reset.scss-theme.scss  styles-variables.scss  styles.scss  test.ts
webui/projects/minsql-ui/src/app/: app-routing.module.ts  app.module.ts
webui/projects/minsql-ui/src/app/app/: app.component.html  app.component.scss  app.component.scss-theme.scss  app.component.spec.ts  (+1 more)
webui/projects/minsql-ui/src/environments/: environment.prod.ts  environment.test.ts  environment.ts
webui/projects/minsql-ui/src/themes/: black-theme.scss  default-theme.scss  light-theme.scss  nature-theme.scss
webui/projects/server/: server.js
webui/public/: index.html  manifest.json
webui/src/: index.js
webui/src/js/: App.js  DataStoreAdd.js  DataStoreList.js  DataStores.js  Manage.js  Menu.js  Progress.js  Results.js  SqlInput.js  TableCreate.js  TableList.js  Tables.js  api.js
webui/src/scss/: _bulma.scss  _misc.scss  _mixins.scss  _modal.scss  _suggest.scss  _variables.scss  styles.scss
(+100 files in other folders)
