[package]
name = "minsql"
version = "0.1.0"
authors = ["Daniel Valdivia <daniel@minio.io>"]
edition = "2018"

[dependencies]

regex = "1"
futures = "0.1.27"
hyper = "0.12.29"
log = "0.4.6"
pretty_env_logger = "0.3.0"
serde_json = "1.0"
toml = "0.4.2"
serde = "1.0.91"
serde_derive = "1.0.91"
rusoto_core = "0.38.0"
rusoto_s3 = "0.38.0"
rusoto_credential = "0.17.0"
xml-rs = "0.8.0"
chrono = "0.4.6"
uuid = { version = "0.7", features = ["v4"] }
hyperscan = "0.1.8"
tokio = "0.1.21"
sqlparser = { git = "https://github.com/andygrove/sqlparser-rs"}
lazy_static = "1.3.0"
bitflags = "1.0.4"
rand = "0.4.2"
tokio-tls = "0.2.1"
native-tls = "0.2.3"