[package]
name = "minsql"
version = "0.1.0"
authors = ["Daniel Valdivia <daniel@minio.io>"]
edition = "2018"

[dependencies]

bitflags = "1.1.0"
chrono = "0.4.7"
futures = "0.1.27"
hyper = "0.12.31"
hyperscan = "0.1.8"
lazy_static = "1.3.0"
log = "0.4.6"
native-tls = "0.2.3"
pretty_env_logger = "0.3.0"
rand = "0.7.0"
regex = "1.1.9"
rusoto_core = "0.38.0"
rusoto_credential = "0.17.0"
rusoto_s3 = "0.38.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
sqlparser = "0.4.0"
tokio = "0.1.22"
tokio-codec = "0.1.1"
tokio-io = "0.1.12"
tokio-tls = "0.2.1"
toml = "0.5.1"
uuid = { version = "0.7.4", features = ["v4"] }
xml-rs = "0.8.0"
